# MREN178-PathFindingAlgorithm

./: .gitignore  178FinalProject.c  CMakeLists.txt  Functions.c  FunctionsAndDeclarations.h  README.md
include/: data_structures.h  pathfinding.h  simulation.h
src/: data_structures.c  main.c  pathfinding.c  simulation.c
tests/: test_pathfinding.c
